change res paths

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Image Puzzle</title>
-    <link href="css/style.css" rel="stylesheet" />
-    <link href="css/image-puzzle.css" rel="stylesheet" />
-    <script src="js/jquery-2.1.1.min.js"></script>
-    <script src="js/jquery-ui.js"></script>
-    <script src="js/image-puzzle.js"></script>
+    <link href="PuzzleGame/css/style.css" rel="stylesheet" />
+    <link href="PuzzleGame/css/image-puzzle.css" rel="stylesheet" />
+    <script src="PuzzleGame/js/jquery-2.1.1.min.js"></script>
+    <script src="PuzzleGame/js/jquery-ui.js"></script>
+    <script src="PuzzleGame/js/image-puzzle.js"></script>
 </head>
 <body>
 
@@ -131,8 +131,8 @@
 <body>
 <div style="text-align: center;">
     <audio controls="controls">
-        <source src="sounds/1.mp3"  type="audio/ogg" loop="true">
-        <source src="sounds/1.mp3"  type="audio/mpeg" loop="true">
+        <source src="PuzzleGame/sounds/1.mp3"  type="audio/ogg" loop="true">
+        <source src="PuzzleGame/sounds/1.mp3"  type="audio/mpeg" loop="true">
         <embed height="100" width="100" src="sounds/1.mp3" />
     </audio>
 </div>
